Make booking app url configurable
